--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
     <div class="container">
-      <h1>Muzicka aplikacija</h1>
+      <h1>Muzicka aplikacija &sung;</h1>
     </div>
     <nav>
       <a href="index.html">Tekst Pesme</a>
