--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sugestije pesama</title>
+  <title>Sugestije videa</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,10 +21,10 @@
   <div class="background"></div>
 
   <div class="wrapper">
-    <h1>Pronadji pesmu</h1>
+    <h1>Pronadji video</h1>
 
     <form id="forma">
-      <label for="fraza">Unesite trazeni pojam: </label>
+      <label for="fraza">Unesite trazeni video: </label>
       <input id="fraza">
       <button id="dugme">Potrazi</button>
     </form>
@@ -33,6 +33,6 @@
 
     <div id="rezultat"></div>
   </div>
-  <script src="js/sugestije.js"></script>
+  <script src="js/video.js"></script>
 </body>
 </html>
