--- a/index.html
+++ b/index.html
@@ -5,42 +5,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ucitavanje podataka</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/navigacija.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <header>
-    <div class="container">
-      <h1>Muzicka aplikacija &sung;</h1>
-    </div>
     <nav>
-      <a href="index.html">Tekst Pesme</a>
-      <a href="sugestije.html">Pesma</a>
+      <div class="logo">M<span>A</span> </span></div>
+      <a href="index.html">Pronadji tekst</a>
+      <a href="sugestije.html">Pronadji pesmu</a>
+      <a href="video.html">Pronadji video</a>
+      <a href="akordi.html">Pronadji akorde</a>
     </nav>
   </header>
 
-  <main class="container">
+  <div class="background"></div>
 
+  <div class="wrapper">
     <h1>Pronadji tekst pesme</h1>
 
-    <input id="izvodjac" placeholder="Naziv izvodjaca:">
+    <form id="forma-za-tekstove">
+      <div class="izvodjac-container">
+        <input id="izvodjac" placeholder="Naziv izvodjaca" required>
+        <label for="izvodjac">Naziv izvodjaca</label>
+      </div>
 
-    <input id="pesma" placeholder="Naziv pesme:">
+      <div class="pesma-container">
+        <input id="pesma" placeholder="Naziv pesme" required>
+        <label for="pesma">Naziv pesme</label>
+      </div>
 
-    <p><button id="potrazi">Potrazi</button></p>
+      <div class="button-container">
+        <button id="potrazi">Pretrazi</button>
+      </div>
+    </form>
 
-    <div>
+    <div class="rezultat-container">
       <h2 id="naslov"></h2>
       <p id="rezultat"></p>
     </div>
+  </div>
 
-  </main>
 
-  <footer class="container">
-    <p>&copy; 2018</p>
-  </footer>
 
   <script src="js/main.js"></script>
 </body>
